--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,9 @@
 
 This simple plugin gives you the ability to call to_csv to a collection of activerecords. The builder options are the same as to_json / to_xml, except for the :include.
 
+== This Fork: 
+
+Supports ActiveResource modles backed with an API in addition to ActiveRecord models.
 
 == Usage
 
